// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders Pagination with customized props correctly 1`] = `
<div>
  <div
    class="za-pagination za-pagination--md is-bordered is-radius"
  >
    <div
      class="za-pagination__pagers"
    >
      <ul>
        <div
          class="za-pagination__addon-before"
        >
          addonBefore
        </div>
        <li
          class="za-pagination__item za-pagination__item--prev za-pagination__item--disabled"
          title="上一页"
        >
          <i
            class="za-icon za-icon-arrow-left theme-default"
          />
        </li>
        <li
          class="za-pagination__item za-pagination__item--active"
          title="1"
        >
          1
        </li>
        <li
          class="za-pagination__item"
          title="2"
        >
          2
        </li>
        <li
          class="za-pagination__item"
          title="3"
        >
          3
        </li>
        <li
          class="za-pagination__item"
          title="4"
        >
          4
        </li>
        <li
          class="za-pagination__item"
          title="5"
        >
          5
        </li>
        <li
          class="za-pagination__item za-pagination__item--jump-next"
          title="向后 5 页"
        />
        <li
          class="za-pagination__item"
          title="最后一页"
        >
          10
        </li>
        <li
          class="za-pagination__item za-pagination__item--next"
          title="下一页"
        >
          <i
            class="za-icon za-icon-arrow-right theme-default"
          />
        </li>
        <div
          class="za-pagination__addon-after"
        >
          addonAfter
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Pagination renders Pagination with jumper correctly 1`] = `
<div>
  <div
    class="za-pagination za-pagination--md is-radius"
  >
    <div
      class="za-pagination__pagers"
    >
      <ul>
        <li
          class="za-pagination__item za-pagination__item--prev za-pagination__item--disabled"
          title="上一页"
        >
          <i
            class="za-icon za-icon-arrow-left theme-default"
          />
        </li>
        <li
          class="za-pagination__item za-pagination__item--active"
          title="1"
        >
          1
        </li>
        <li
          class="za-pagination__item"
          title="2"
        >
          2
        </li>
        <li
          class="za-pagination__item"
          title="3"
        >
          3
        </li>
        <li
          class="za-pagination__item"
          title="4"
        >
          4
        </li>
        <li
          class="za-pagination__item"
          title="5"
        >
          5
        </li>
        <li
          class="za-pagination__item za-pagination__item--jump-next"
          title="向后 5 页"
        />
        <li
          class="za-pagination__item"
          title="最后一页"
        >
          10
        </li>
        <li
          class="za-pagination__item za-pagination__item--next"
          title="下一页"
        >
          <i
            class="za-icon za-icon-arrow-right theme-default"
          />
        </li>
      </ul>
      <div
        class="za-pagination__jumper"
      >
        跳至
        <div
          class="ui-input-box shape-radius"
        >
          <input
            class="ui-input"
            style="width:50px;text-align:center;margin-left:5px;margin-right:5px"
            type="text"
            value="1"
          />
        </div>
        页
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination renders Pagination with total info correctly 1`] = `
<div>
  <div
    class="za-pagination za-pagination--md is-radius"
  >
    <div
      class="za-pagination__total"
    >
      共有 100 条记录 第 1 / 10 页
    </div>
    <div
      class="za-pagination__pagers"
    >
      <ul>
        <li
          class="za-pagination__item za-pagination__item--prev za-pagination__item--disabled"
          title="上一页"
        >
          <i
            class="za-icon za-icon-arrow-left theme-default"
          />
        </li>
        <li
          class="za-pagination__item za-pagination__item--active"
          title="1"
        >
          1
        </li>
        <li
          class="za-pagination__item"
          title="2"
        >
          2
        </li>
        <li
          class="za-pagination__item"
          title="3"
        >
          3
        </li>
        <li
          class="za-pagination__item"
          title="4"
        >
          4
        </li>
        <li
          class="za-pagination__item"
          title="5"
        >
          5
        </li>
        <li
          class="za-pagination__item za-pagination__item--jump-next"
          title="向后 5 页"
        />
        <li
          class="za-pagination__item"
          title="最后一页"
        >
          10
        </li>
        <li
          class="za-pagination__item za-pagination__item--next"
          title="下一页"
        >
          <i
            class="za-icon za-icon-arrow-right theme-default"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Pagination renders normal Pagination correctly 1`] = `
<div>
  <div
    class="za-pagination za-pagination--md is-radius"
  >
    <div
      class="za-pagination__pagers"
    >
      <ul>
        <li
          class="za-pagination__item za-pagination__item--prev za-pagination__item--disabled"
          title="上一页"
        >
          <i
            class="za-icon za-icon-arrow-left theme-default"
          />
        </li>
        <li
          class="za-pagination__item za-pagination__item--active"
          title="1"
        >
          1
        </li>
        <li
          class="za-pagination__item"
          title="2"
        >
          2
        </li>
        <li
          class="za-pagination__item"
          title="3"
        >
          3
        </li>
        <li
          class="za-pagination__item"
          title="4"
        >
          4
        </li>
        <li
          class="za-pagination__item"
          title="5"
        >
          5
        </li>
        <li
          class="za-pagination__item za-pagination__item--jump-next"
          title="向后 5 页"
        />
        <li
          class="za-pagination__item"
          title="最后一页"
        >
          10
        </li>
        <li
          class="za-pagination__item za-pagination__item--next"
          title="下一页"
        >
          <i
            class="za-icon za-icon-arrow-right theme-default"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;
